ADD: MasterTextFile_ENGLISH & GERMAN + EDIT: Changelog
- Adding Text files for text editing and translation
- Formatting changelog

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,7 +22,7 @@ Dates, grammar and times are always in American format.
 
 All (BUG #) markers are accurate to their GitHub URL counterparts.  To visit the main report,
 the number itself can be inserted into the URL.
-(i.e. (BUG #68845) = https://github.com/AlyMar1994/UFoCP/issues/68845)
+(i.e. "(BUG #68845)" = https://github.com/AlyMar1994/UFoCP/issues/68845)
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
