EDIT: Changelog.txt
- Edited changelog.  Fixing grammar.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -37,4 +37,4 @@ Ability Fixes:
 
 
 Unit Fixes:
-• Whenever The Admonitor - Grand Admiral Thrawn would remove the Consortium's corruption, it would play the Rebel's VO instead of the Empires. (BUG #12)
+• Whenever The Admonitor - Grand Admiral Thrawn would remove the Consortium's corruption, it would play the Rebel's VO instead of the Empire's. (BUG #12)
