EDIT: Changelog.txt
- Woops forgot to ambigufy the date before launch :painedcrying:

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,7 +29,7 @@ the number itself can be inserted into the URL.
 
 
 
-v1.0.1.#### (2021-09-##) [FoC v1.121.748742]
+v1.0.1.#### (2021-##-##) [FoC v1.121.748742]
 ============================================
 
 Ability Fixes:
